fixed some stuffs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     src="./images/oouLogo-removebg.png"
                     alt="Site Logo"
                   />
-                  <span style="font-size: 1.6rem; vertical-align: middle"
+                  <span style="font-size: 1.6rem;font-weight: 900; vertical-align: middle"
                     >OOU-DEAI</span
                   >
                 </a>
@@ -251,7 +251,7 @@
                       <i class="icon-Hand---Book"></i>
                     </div>
                     <div class="feature-content">
-                      <h6 class="feature-title">Flexible Classes</h6>
+                      <h6 class="feature-title">Learn In-Demand Skills</h6>
                       <p class="feature-description">
                         It is a long established fact that a reader will be
                         distracted by this on readable content of when looking
@@ -272,7 +272,7 @@
                       <i class="icon-Campus"></i>
                     </div>
                     <div class="feature-content">
-                      <h6 class="feature-title">Learn From Anywhere</h6>
+                      <h6 class="feature-title">Training the next generation of entrepreneurs and innovators</h6>
                       <p class="feature-description">
                         It is a long established fact that a reader will be
                         distracted by this on readable content of when looking
@@ -548,7 +548,7 @@
               data-sal-duration="800"
             >
               <span class="pre-title">During entrepreneurship education</span>
-              <h3 class="title">Students learn how to</h3>
+              <h3 class="title">Students will learn how to</h3>
             </div>
           </div>
         </div>
