fixed some stuffs

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                   have a well-equipped Research Centre for
                   Entrepreneurship/Leadership Studies and to re-train those who
                   have experience in different vocational skills (i.e. Train the
-                  Trainers). To make OOODEAI an executive education learning
+                  Trainers). To make OOU-DEAI an executive education learning
                   partner of choice to a wide range of Public and Private
                   Organizations. The Olabisi Onabanjo University, Directorate of
                   Entrepreneurship & Innovation is a practical and business
@@ -288,7 +288,7 @@
                   data-sal="slide-up"
                   data-sal-duration="800"
                 >
-                  <a class="edu-btn" href="#"
+                  <a class="edu-btn" href="#contact"
                     >Reach Out To Us<i class="icon-arrow-right-line-right"></i
                   ></a>
                 </div>
@@ -489,7 +489,7 @@
                 <div class="feature-list">
                   <i class="icon-checkbox-circle-fill"></i>
 
-                  To promote the culture of entrepreneurship among NOUN students
+                  To promote the culture of entrepreneurship among OOU students
                 </div>
                 <div class="feature-list">
                   <i class="icon-checkbox-circle-fill"></i>
@@ -1162,13 +1162,13 @@
                       <div class="content">
                         <h6 class="title">Email Us</h6>
                         <p>
-                          <a href="mailto:eduvibe@example.com" target="_blank"
-                            >eduvibe@example.com</a
+                          <a href="mailto:oouagoiwoye@example.com" target="_blank"
+                            >oouagoiwoye@example.com</a
                           >
                         </p>
                         <p>
-                          <a href="mailto:contact@eduvibe.com" target="_blank"
-                            >contact@eduvibe.com</a
+                          <a href="mailto:contact@oouagoiwoye.com" target="_blank"
+                            >contact@oouagoiwoye.com</a
                           >
                         </p>
                       </div>
