made few changes to the icons and project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
                     src="./images/oouLogo-removebg.png"
                     alt="Site Logo"
                   />
-                  <span style="font-size: 1.6rem;font-weight: 900; vertical-align: middle"
+                  <span
+                    style="
+                      font-size: 1.6rem;
+                      font-weight: 900;
+                      vertical-align: middle;
+                    "
                     >OOU-DEAI</span
                   >
                 </a>
@@ -272,7 +277,10 @@
                       <i class="icon-Campus"></i>
                     </div>
                     <div class="feature-content">
-                      <h6 class="feature-title">Training the next generation of entrepreneurs and innovators</h6>
+                      <h6 class="feature-title">
+                        Training the next generation of entrepreneurs and
+                        innovators
+                      </h6>
                       <p class="feature-description">
                         It is a long established fact that a reader will be
                         distracted by this on readable content of when looking
@@ -592,7 +600,7 @@
                 <div class="icon">
                   <a href="#">
                     <!-- <i class="icon-shopping-basket-2-line"></i> -->
-                    <i class="icon-shopping-basket-2-line"></i>
+                    <i class="icon-pentool"></i>
                   </a>
                 </div>
                 <div class="content">
@@ -616,7 +624,7 @@
               <div class="inner">
                 <div class="icon">
                   <a href="#">
-                    <i class="icon-trophy-line"></i>
+                    <i class="icon-Heart"></i>
                   </a>
                 </div>
                 <div class="content">
@@ -679,11 +687,11 @@
             <div class="service-card service-card-4">
               <div class="inner">
                 <div class="icon">
-                  <i class="icon-student-read"></i>
+                  <i class="icon-science"></i>
                   <span class="subtitle">27 Courses</span>
                 </div>
                 <div class="content">
-                  <h6 class="title"><a href="#">Human Reasearch</a></h6>
+                  <h6 class="title"><a href="#">Software Development</a></h6>
                   <p class="description">
                     Lore Ipsum a simply dummy text of the printing
                   </p>
@@ -707,7 +715,7 @@
                   <span class="subtitle">45 Courses</span>
                 </div>
                 <div class="content">
-                  <h6 class="title"><a href="#">Web Development</a></h6>
+                  <h6 class="title"><a href="#">Blockchain Technology</a></h6>
                   <p class="description">
                     Lore Ipsum a simply dummy text of the printing
                   </p>
@@ -731,79 +739,81 @@
                   <span class="subtitle">29 Courses</span>
                 </div>
                 <div class="content">
-                  <h6 class="title"><a href="#">Mathmatical Physics</a></h6>
-                  <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- End Service Grid  -->
-
-          <!-- Start Service Grid  -->
-          <div
-            class="col-lg-3 col-md-6 col-sm-6 col-12 sal-animate"
-            data-sal-delay="150"
-            data-sal="slide-up"
-            data-sal-duration="800"
-          >
-            <div class="service-card service-card-4">
-              <div class="inner">
-                <div class="icon">
-                  <i class="icon-calculator"></i>
-                  <span class="subtitle">35 Courses</span>
-                </div>
-                <div class="content">
-                  <h6 class="title"><a href="#">Number Theory</a></h6>
-                  <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- End Service Grid  -->
-
-          <!-- Start Service Grid  -->
-          <div
-            class="col-lg-3 col-md-6 col-sm-6 col-12 sal-animate"
-            data-sal-delay="150"
-            data-sal="slide-up"
-            data-sal-duration="800"
-          >
-            <div class="service-card service-card-4">
-              <div class="inner">
-                <div class="icon">
-                  <i class="icon-microscopes"></i>
-                  <span class="subtitle">40 Courses</span>
-                </div>
-                <div class="content">
-                  <h6 class="title"><a href="#">Data Sciences</a></h6>
-                  <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- End Service Grid  -->
-
-          <!-- Start Service Grid  -->
-          <div
-            class="col-lg-3 col-md-6 col-sm-6 col-12 sal-animate"
-            data-sal-delay="150"
-            data-sal="slide-up"
-            data-sal-duration="800"
-          >
-            <div class="service-card service-card-4">
-              <div class="inner">
-                <div class="icon">
-                  <i class="icon-calculator"></i>
-                  <span class="subtitle">40 Courses</span>
-                </div>
-                <div class="content">
                   <h6 class="title"><a href="#">Web Development</a></h6>
+                  <p class="description">
+                    Lore Ipsum a simply dummy text of the printing
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End Service Grid  -->
+
+          <!-- Start Service Grid  -->
+          <div
+            class="col-lg-3 col-md-6 col-sm-6 col-12 sal-animate"
+            data-sal-delay="150"
+            data-sal="slide-up"
+            data-sal-duration="800"
+          >
+            <div class="service-card service-card-4">
+              <div class="inner">
+                <div class="icon">
+                    <i class="icon-microscopes"></i>
+                    <span class="subtitle">35 Courses</span>
+                </div>
+                <div class="content">
+                  <h6 class="title"><a href="#">Project Management</a></h6>
+                  <p class="description">
+                    Lore Ipsum a simply dummy text of the printing
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End Service Grid  -->
+
+          <!-- Start Service Grid  -->
+          <div
+            class="col-lg-3 col-md-6 col-sm-6 col-12 sal-animate"
+            data-sal-delay="150"
+            data-sal="slide-up"
+            data-sal-duration="800"
+          >
+            <div class="service-card service-card-4">
+              <div class="inner">
+                <div class="icon">
+                  <i class="icon-student-read"></i>
+                  <span class="subtitle">40 Courses</span>
+                </div>
+                <div class="content">
+                  <h6 class="title">
+                    <a href="#">Data Sciences And Analytics</a>
+                  </h6>
+                  <p class="description">
+                    Lore Ipsum a simply dummy text of the printing
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End Service Grid  -->
+
+          <!-- Start Service Grid  -->
+          <div
+            class="col-lg-3 col-md-6 col-sm-6 col-12 sal-animate"
+            data-sal-delay="150"
+            data-sal="slide-up"
+            data-sal-duration="800"
+          >
+            <div class="service-card service-card-4">
+              <div class="inner">
+                <div class="icon">
+                  <i class="icon-calculator"></i>
+                  <span class="subtitle">40 Courses</span>
+                </div>
+                <div class="content">
+                  <h6 class="title"><a href="#">UI/UX</a></h6>
                   <p class="description">
                     Lore Ipsum a simply dummy text of the printing
                   </p>
@@ -847,11 +857,13 @@
             <div class="service-card service-card-4">
               <div class="inner">
                 <div class="icon">
-                  <i class="icon-science"></i>
+                  <i class="icon-Pencil"></i>
                   <span class="subtitle">18 Courses</span>
                 </div>
                 <div class="content">
-                  <h6 class="title"><a href="#">Nuclear Power</a></h6>
+                  <h6 class="title">
+                    <a href="#">Content Creation & Management</a>
+                  </h6>
                   <p class="description">
                     Lore Ipsum a simply dummy text of the printing
                   </p>
@@ -1114,10 +1126,12 @@
                       <div class="content">
                         <h6 class="title">Our Website</h6>
                         <p>
-                          <a href="#" target="_blank">www.example.com</a>
-                        </p>
-                        <p>
-                          <a href="#" target="_blank">www.theme.net</a>
+                          <a
+                            href="https://stdportal.oouagoiwoye.edu.ng/"
+                            target="_blank"
+                            >https://stdportal <br />
+                            .oouagoiwoye.edu.ng/</a
+                          >
                         </p>
                       </div>
                     </div>
@@ -1139,8 +1153,9 @@
                       </div>
                       <div class="content">
                         <h6 class="title">Call Us On</h6>
-                        <p><a href="tel:+2763(388)2930">+2763 (388) 2930</a></p>
-                        <p><a href="tel:+4875(356)2568">+4875 (356) 2568</a></p>
+                        <p>
+                          <a href="tel:+2348033454676">+234 803 345 4676</a>
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -1162,13 +1177,18 @@
                       <div class="content">
                         <h6 class="title">Email Us</h6>
                         <p>
-                          <a href="mailto:oouagoiwoye@example.com" target="_blank"
+                          <a
+                            href="mailto:oouagoiwoye@example.com"
+                            target="_blank"
                             >oouagoiwoye@example.com</a
                           >
                         </p>
                         <p>
-                          <a href="mailto:contact@oouagoiwoye.com" target="_blank"
-                            >contact@oouagoiwoye.com</a
+                          <a
+                            href="mailto:usman.mustapha@oouagoiwoye.edu.ng"
+                            target="_blank"
+                            >usman.mustapha <br />
+                            @oouagoiwoye.edu.ng</a
                           >
                         </p>
                       </div>
@@ -1368,7 +1388,9 @@
                 <div class="inner">
                   <ul class="footer-link link-hover">
                     <li>
-                      <a href="#about-us"><i class="icon-Double-arrow"></i>About Us</a>
+                      <a href="#about-us"
+                        ><i class="icon-Double-arrow"></i>About Us</a
+                      >
                     </li>
                     <li>
                       <a href="#events"
@@ -1421,18 +1443,14 @@
                       </li>
                       <li>
                         <i class="icon-phone-fill"></i
-                        ><a href="tel:+1(237)382-2839">+ 1 (237) 382-2839</a>
-                      </li>
-                      <li>
-                        <i class="icon-phone-fill"></i
-                        ><a href="tel:+1(237)382-2840">+ 1 (237) 382-2840</a>
+                        ><a href="tel:+2348033454676">+ 234 803 345 4676</a>
                       </li>
                       <li>
                         <i class="icon-mail-line-2"></i
                         ><a
                           target="_blank"
-                          href="mailto:yourmailaddress@example.com"
-                          >yourmailaddress@example.com</a
+                          href="mailto:usman.mustapha@oouagoiwoye.edu.ng"
+                          >usman.mustapha@oouagoiwoye.edu.ng</a
                         >
                       </li>
                     </ul>
