made changes to the faq section and project content

--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
                     </div>
                     <div class="feature-content">
                       <h6 class="feature-title">Learn In-Demand Skills</h6>
-                      <p class="feature-description">
+                      <!-- <p class="feature-description">
                         It is a long established fact that a reader will be
                         distracted by this on readable content of when looking
                         at its layout.
-                      </p>
+                      </p> -->
                     </div>
                   </div>
                   <!-- End Single Feature  -->
@@ -281,11 +281,11 @@
                         Training the next generation of entrepreneurs and
                         innovators
                       </h6>
-                      <p class="feature-description">
+                      <!-- <p class="feature-description">
                         It is a long established fact that a reader will be
                         distracted by this on readable content of when looking
                         at its layout.
-                      </p>
+                      </p> -->
                     </div>
                   </div>
                   <!-- End Single Feature  -->
@@ -693,7 +693,8 @@
                 <div class="content">
                   <h6 class="title"><a href="#">Software Development</a></h6>
                   <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
+                    We will train you on how to build and write clean and
+                    efficient Softwares and algorithms.
                   </p>
                 </div>
               </div>
@@ -717,7 +718,9 @@
                 <div class="content">
                   <h6 class="title"><a href="#">Blockchain Technology</a></h6>
                   <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
+                    We train you on how to design secure blockchain technologies
+                    and interfaces. And how to maintain client and server-side
+                    applications.
                   </p>
                 </div>
               </div>
@@ -741,7 +744,9 @@
                 <div class="content">
                   <h6 class="title"><a href="#">Web Development</a></h6>
                   <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
+                    We train you on how to create website layout/user interfaces
+                    by using standard HTML/CSS practices, and how to integrate
+                    data from various back-end services and databases
                   </p>
                 </div>
               </div>
@@ -759,13 +764,15 @@
             <div class="service-card service-card-4">
               <div class="inner">
                 <div class="icon">
-                    <i class="icon-microscopes"></i>
-                    <span class="subtitle">35 Courses</span>
+                  <i class="icon-microscopes"></i>
+                  <span class="subtitle">35 Courses</span>
                 </div>
                 <div class="content">
                   <h6 class="title"><a href="#">Project Management</a></h6>
                   <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
+                    We will train you on how to coordinate people and processes
+                    to ensure that projects are delivered on time and desired
+                    result are produced
                   </p>
                 </div>
               </div>
@@ -791,7 +798,9 @@
                     <a href="#">Data Sciences And Analytics</a>
                   </h6>
                   <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
+                    We will train you on how to collect and analyse data, how to
+                    build models to address business problems and present
+                    information using data visualization techniques
                   </p>
                 </div>
               </div>
@@ -815,7 +824,10 @@
                 <div class="content">
                   <h6 class="title"><a href="#">UI/UX</a></h6>
                   <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
+                    We will train you on how to create the user interface for an
+                    app, website, or other interactive media, how to collaborate
+                    with product managers and engineers to gather requirements
+                    from users before designing ideas
                   </p>
                 </div>
               </div>
@@ -839,7 +851,8 @@
                 <div class="content">
                   <h6 class="title"><a href="#">Art &amp; Design</a></h6>
                   <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
+                    This training involves Artistic techniques, sculpture
+                    making, drawing, shoe making and Soap Making
                   </p>
                 </div>
               </div>
@@ -865,7 +878,10 @@
                     <a href="#">Content Creation & Management</a>
                   </h6>
                   <p class="description">
-                    Lore Ipsum a simply dummy text of the printing
+                    In this training we train you on how to produce marketing
+                    copy to advertise company products, writing, reviewing,
+                    editing, and updating content about industry-related topics
+                    and promoting company content on social media
                   </p>
                 </div>
               </div>
@@ -942,13 +958,15 @@
                 >
                   <div class="edu-accordion-body">
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                      Accusamus quaerat voluptatum quibusdam soluta ullam
-                      maiores molestiae laudantium omnis! Deleniti cumque error
-                      distinctio laboriosam nobis reiciendis magni perferendis
-                      vero, facere obcaecati. Lorem ipsum dolor sit, amet
-                      consectetur adipisicing elit. Consequuntur tenetur
-                      perferendis, animi nesciunt eveniet vitae.
+                      Olabisi Onabanjo University - Directorate of
+                      Entrepreneurship and Innovation (OOU-DEAI) an executive
+                      education learning partner of choice to a wide range of
+                      Public and Private Organizations. it is a practical and
+                      business oriented directorate where people of diverse
+                      background & culture receive training. It is a
+                      conceptualized Directorate that aims at empowering
+                      participants through provision of technical based training
+                      etc.
                     </p>
                   </div>
                 </div>
@@ -964,7 +982,8 @@
                     aria-expanded="false"
                     aria-controls="collapseTwo"
                   >
-                    How do i Participate in the training program
+                    Do I need to have any prior or technical knowledge to take
+                    part in the training program
                   </button>
                 </div>
                 <div
@@ -975,11 +994,38 @@
                 >
                   <div class="edu-accordion-body">
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Minus vitae nisi libero animi rem velit officiis quibusdam
-                      itaque ipsum maiores, sint dicta aut natus tempora
-                      consequuntur veniam necessitatibus ab, cupiditate amet
-                      perferendis deserunt saepe aliquam?
+                      No, you do not need to have any technical knowledge to
+                      take part in the training program. Although you should
+                      have the willingness to learn through mentorship and
+                      collaboration
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="edu-accordion-item">
+                <div class="edu-accordion-header" id="headingThree">
+                  <button
+                    class="edu-accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    Would I have to pay to enroll for the training?
+                  </button>
+                </div>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="headingThree"
+                  data-bs-parent="#accordionExample1"
+                >
+                  <div class="edu-accordion-body">
+                    <p>
+                      No, the program is completely free thanks to the
+                      Directorate of Entrepreneurship and Innovation
                     </p>
                   </div>
                 </div>
@@ -1211,7 +1257,10 @@
                       </div>
                       <div class="content">
                         <h6 class="title">Our Location</h6>
-                        <p>Olabisi Onabanjo University, Ogun State, Nigeria</p>
+                        <p>
+                          Directorate Of Entreprenuership and Innovation, OOU,
+                          Ogun, Nigeria
+                        </p>
                       </div>
                     </div>
                   </div>
