--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
                   />
                   <span
                     style="
-                      font-size: 1.6rem;
+                      font-size: 2.6rem;
                       font-weight: 900;
                       vertical-align: middle;
                     "
+                    id="page--title"
                     >OOU-DEAI</span
                   >
                 </a>
