--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
                   data-sal="slide-up"
                   data-sal-duration="800"
                 >
-                  It was established by the University Senate on Thursday, 26th
-                  May, 2021. The Directorate was established to be a model for
+                  The Directorate was established to be a model for
                   the Nigerian University System. The aim of the programme is to
                   have a well-equipped Research Centre for
                   Entrepreneurship/Leadership Studies and to re-train those who
@@ -1504,14 +1503,6 @@
                             >entrepreneurship<br />@oouagoiwoye.edu.ng</a
                           >
                         </p>
-                        <p>
-                          <a
-                            href="mailto:usman.mustapha@oouagoiwoye.edu.ng"
-                            target="_blank"
-                            >usman.mustapha <br />
-                            @oouagoiwoye.edu.ng</a
-                          >
-                        </p>
                       </div>
                     </div>
                   </div>
@@ -1768,14 +1759,6 @@
                       <li>
                         <i class="icon-phone-fill"></i
                         ><a href="tel:+2348033454676">+ 234 803 345 4676</a>
-                      </li>
-                      <li>
-                        <i class="icon-mail-line-2"></i
-                        ><a
-                          target="_blank"
-                          href="mailto:usman.mustapha@oouagoiwoye.edu.ng"
-                          >usman.mustapha@oouagoiwoye.edu.ng</a
-                        >
                       </li>
                       <li>
                         <i class="icon-mail-line-2"></i
